--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <link rel="stylesheet" href="./css/custom_styles.css">
 </head>
 <body>
-    <a href="https://mobilemonster.com.au">MobileMonster.com.au</a>
+    <a href="https://mobilemonster.com.au">MobileMonster</a>
 </body>
 </html>
